@@ -346,8 +346,8 @@ TEST(CacheWithBackingStoreTest, test_rebalancing_in_the_wild_LongRunning) {
   co.cacheSize = 16 * 1024 * 1024;
   Manager manager(sharedPRNG, postFn, co);
   Rebalancer rebalancer(&manager);
-  TransactionalStore store1(&manager);
-  TransactionalStore store2(&manager);
+  auto store1 = std::make_unique<TransactionalStore>(&manager);
+  auto store2 = std::make_unique<TransactionalStore>(&manager);
   std::uint64_t totalDocuments = 1000000;
   std::uint64_t writeBatchSize = 1000;
   std::uint64_t readBatchSize = 100;
@@ -373,8 +373,8 @@ TEST(CacheWithBackingStoreTest, test_rebalancing_in_the_wild_LongRunning) {
 
   // initial fill
   for (std::uint64_t i = 1; i <= totalDocuments; i++) {
-    store1.insert(nullptr, TransactionalStore::Document(i));
-    store2.insert(nullptr, TransactionalStore::Document(i));
+    store1->insert(nullptr, TransactionalStore::Document(i));
+    store2->insert(nullptr, TransactionalStore::Document(i));
   }
 
   auto readWorker = [&store1, &store2, &storeBias, &writersDone, writerCount,
@@ -382,7 +382,8 @@ TEST(CacheWithBackingStoreTest, test_rebalancing_in_the_wild_LongRunning) {
     while (writersDone.load() < writerCount) {
       std::uint32_t r =
           RandomGenerator::interval(static_cast<std::uint32_t>(99UL));
-      TransactionalStore* store = (r <= storeBias) ? &store1 : &store2;
+      TransactionalStore* store =
+          (r <= storeBias) ? store1.get() : store2.get();
       auto tx = store->beginTransaction(true);
       std::uint64_t start = static_cast<std::uint64_t>(
           std::chrono::steady_clock::now().time_since_epoch().count());
@@ -409,7 +410,8 @@ TEST(CacheWithBackingStoreTest, test_rebalancing_in_the_wild_LongRunning) {
     for (std::uint64_t batch = 0; batch < batches; batch++) {
       std::uint32_t r =
           RandomGenerator::interval(static_cast<std::uint32_t>(99UL));
-      TransactionalStore* store = (r <= storeBias) ? &store1 : &store2;
+      TransactionalStore* store =
+          (r <= storeBias) ? store1.get() : store2.get();
       auto tx = store->beginTransaction(false);
       for (std::uint64_t i = 0; i < writeBatchSize; i++) {
         auto d = store->lookup(tx, choice);
@@ -446,7 +448,8 @@ TEST(CacheWithBackingStoreTest, test_rebalancing_in_the_wild_LongRunning) {
   // join threads
   threads.clear();
 
-  while (store1.cache()->isResizing() || store2.cache()->isResizing()) {
+  while (store1->cache()->isResizingOrMigratingFlagSet() ||
+         store2->cache()->isResizingOrMigratingFlagSet()) {
     std::this_thread::yield();
   }
 
@@ -468,11 +471,15 @@ TEST(CacheWithBackingStoreTest, test_rebalancing_in_the_wild_LongRunning) {
   // join threads
   threads.clear();
 
-  while (store1.cache()->isResizing() || store2.cache()->isResizing()) {
+  while (store1->cache()->isResizingOrMigratingFlagSet() ||
+         store2->cache()->isResizingOrMigratingFlagSet()) {
     std::this_thread::yield();
   }
   doneRebalancing = true;
   rebalancerThread.join();
+
+  store1.reset();
+  store2.reset();
 
   RandomGenerator::shutdown();
 }
